# kfchess-cc

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  KFCHESS_ORIGINAL_IMPLEMENTATION.md  README.md  docker-compose.yml
client/: .env.example  (+4 more)
server/: .env.example  README.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_add_game_replays.py  002_add_users.py  004_add_lobby_performance_indexes.py  177687c383a4_add_tick_rate_hz_to_game_replays.py
server/src/kfchess/: __init__.py  main.py  settings.py
server/src/kfchess/ai/: __init__.py  base.py  dummy.py
server/src/kfchess/api/: games.py  leaderboard.py  lobbies.py  router.py  users.py
server/src/kfchess/auth/: rate_limit.py  router.py  users.py
server/src/kfchess/campaign/: __init__.py
server/src/kfchess/db/: __init__.py  models.py  session.py
server/src/kfchess/game/: __init__.py  board.py  collision.py  engine.py  moves.py  pieces.py  replay.py  state.py
server/src/kfchess/lobby/: __init__.py  manager.py
server/src/kfchess/redis/: __init__.py
server/src/kfchess/replay/: __init__.py  session.py
server/src/kfchess/services/: game_service.py
server/src/kfchess/ws/: handler.py  lobby_handler.py  protocol.py  replay_handler.py
server/tests/: __init__.py  conftest.py  test_health.py
server/tests/integration/: conftest.py  test_lobby_manager_persistence.py  test_lobby_repository.py
server/tests/integration/auth/: test_google_oauth.py  test_registration_flow.py
server/tests/unit/: test_api_games.py  test_api_lobbies.py  test_game_service.py  test_lobby_websocket.py  test_replay_repository.py  test_websocket.py
(+81 files in other folders)
